--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -78,7 +78,7 @@
 }
 /* 结束：登陆页面 */
 /* 开始：layout页面 */
-.layoutLeft {
+.layout_left {
   width: 100%;
   height: 100%;
   .trigger {
@@ -117,19 +117,19 @@
     }
   }
 }
-.layoutTop{
+.layout_top {
   width: 100%;
   height: 100%;
-  .logo{
-    margin:0 36px;
+  .logo {
+    margin: 0 36px;
     color: #fff;
     font-size: 14px;
     text-align: center;
   }
-  .ant-layout-header{
+  .ant-layout-header {
     padding: 0 !important;
     position: relative;
-    .right{
+    .right {
       position: absolute;
       top: 0;
       right: 20px;
@@ -149,34 +149,3 @@
   }
 }
 /* 结束：layout页面 */
-/* 开始：更换主题页面 */
-.theme {
-  h2 {
-    margin: 30px 0;
-  }
-  .ant-btn {
-    width: 60px;
-    border: none !important;
-    margin: 5px 20px;
-  }
-  .input{
-    .ant-input,.ant-input-affix-wrapper{
-      width: 180px;
-    }
-  }
-  img{
-    width: 100%;
-  }
-}
-/* 结束：更换主题页面 */
-
-/* 开始：更换布局页面 */
-.changeLayout{
-  h2 {
-    margin: 30px 0;
-  }
-  .ant-btn {
-    margin: 5px 20px;
-  }
-}
-/* 结束：更换布局页面 */
