新增查询框

--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -10,44 +10,29 @@
 .ant-layout-sider,
 .ant-menu-dark,
 .ant-menu-dark .ant-menu-sub {
-  background: @layout_sider_bg !important;
+    background: @layout_sider_bg  !important;
 }
 
 .layout {
-  .header {
-    background: @layout_header_bg !important;
-  }
+    .header {
+        background: @layout_header_bg  !important;
+    }
 }
 
-
-// 自适应字体大小
-/* 屏幕大于1600px时 */
-@media screen and (min-width: 1600px) {
-  .ict_font_size{
-    font-size: 26px;
-  }
-  .ict_color{
-    color:blue;
-  }
+// 查询条件的样式修改{
+.ant-form-inline .ant-form-item {
+    display: flex;
 }
-
-/* 屏幕大于1200px小与1599时 */
-@media screen and (min-width: 1200px) and (max-width:1599px) {
-  .ict_font_size{
-    font-size: 20px;
-  }
-  .ict_color{
-    color:green;
-  }
+.ant-form-inline .ant-form-item-label {
+    width: auto;
 }
-
-/* 屏幕小于1199px时 */
-@media screen and (max-width: 1199px) {
-  .ict_font_size{
-    font-size: 14px;
-  }
-  .ict_color{
-    color:red;
-  }
+.ant-form-inline .ant-form-item-control-wrapper {
+    flex: 1 1;
 }
-
+.ant-form-inline .ant-row {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+// }
